# strata-core

./: .gitignore  CHANGELOG.md  CLAUDE_COORDINATION.md  CROSS_CRATE_ANALYSIS.md  Cargo.toml  M6-spec.md  PROJECT_STATUS.md  README.md  STRATA_CONCURRENCY.md  STRATA_CONCURRENCY_REVIEW.md  STRATA_CORE.md  STRATA_CORE_FILES.md  STRATA_CORE_REVIEW.md  STRATA_DURABILITY.md  STRATA_DURABILITY_REVIEW.md  STRATA_ENGINE.md  STRATA_ENGINE_REVIEW.md  STRATA_STORAGE.md  STRATA_STORAGE_REVIEW.md  TESTING_AUDIT_REPORT.md  WAL_SYSTEMS.md
.github/workflows/: ci.yml
benches/: BENCHMARKS.md  BENCHMARK_EXECUTION.md  README.md  comprehensive_benchmarks.rs  cross_primitive.rs  industry_comparison.rs  m1_storage.rs  m2_transactions.rs  m3_primitives.rs  m4_contention.rs  m4_facade_tax.rs  m4_performance.rs  m5_performance.rs  m6_search.rs  primitives_kvstore.rs
blackbox-tests/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  format.rs  main.rs  parse.rs  repl.rs  state.rs  value.rs
crates/intelligence/: Cargo.toml  LICENSE
crates/intelligence/src/: fuser.rs  hybrid.rs  index.rs  lib.rs  scorer.rs  tokenizer.rs
crates/intelligence/src/embed/: download.rs  extract.rs  mod.rs  model.rs  tokenizer.rs
crates/intelligence/src/runtime/: mod.rs  safetensors.rs  tensor.rs
crates/intelligence/tests/: api_contracts.rs  determinism.rs
crates/wire/: Cargo.toml
crates/wire/src/: lib.rs
crates/wire/src/json/: decode.rs  encode.rs  envelope.rs  error.rs  mod.rs  version.rs
docs/: index.md  troubleshooting.md
github-issues/: epic-2-claude-prompts.md  epic-3-claude-prompts.md  epic-4-claude-prompts.md  epic-5-claude-prompts.md
roadmap/: README.md  benchmarks.md  markdown-documents.md  papers.md  strata-cloud-sync-edge-architecture.md  strata-cloud-sync.md  v0.10-nl-search-advanced.md  v0.11-advanced-branch-workflows.md  v0.9-nl-search-basic.md
scripts/: bench_runner.sh  complete-story.sh  review-epic.sh  start-story.sh
src/: database.rs  error.rs  lib.rs  prelude.rs  types.rs
tests/: AUDIT.md  IGNORED_TESTS.md  m10_conformance_tests.rs  m12_unified_api_tests.rs  m4_red_flags.rs
(+670 files in other folders)
