[package]
name = "strata-intelligence"
version = "0.1.0"
edition = "2021"
description = "Intelligence layer for Strata — derived operations over primitives"
license = "MIT"
publish = false

[dependencies]
strata-core = { path = "../core" }
strata-engine = { path = "../engine" }
dashmap = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { workspace = true }

[dev-dependencies]
tempfile = { version = "3" }
