[package]
name = "strata-wire"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false
description = "Wire encoding for Strata - JSON value encoding with special wrappers"

[dependencies]
strata-core = { path = "../core" }
thiserror = { workspace = true }
base64 = "0.22"

[dev-dependencies]
proptest = { workspace = true }
